--- a/config/zk.conf
+++ b/config/zk.conf
@@ -1,6 +1,6 @@
 [zookeeper]
 #zk集群地址使用,分隔，如127.0.0.1:2181,127.0.0.1:2182....
-hosts = '192.168.1.2:2181,192.168.1.3.127:2182,192.168.1.4:2183'
+hosts = '192.168.212.127:2181,192.168.212.127:2182,192.168.212.127:2183'
 
 
 [nodepath]
@@ -28,20 +28,26 @@ haproxy_path = 'haproxy'
 #记录心跳丢失但mysql在线
 watch_down = 'watch-down'
 
+
 [mysqldb]
 #mysql数据库配置选项
-mysqluser = ''
-mysqlpasswd = ''
+mysqluser = 'root'
+mysqlpasswd = 'root'
 ca = 'ca.pem'
 cert = 'client-cert.pem'
 key = 'client-key.pem'
 
 #主从用户
-repluser = ''
-replpasswd = ''
+repluser = 'bsrt_repl'
+replpasswd = 'repl_123,./'
 ssl_ca = '/usr/local/mysql/keys/ca.pem'
 ssl_cert = '/usr/local/mysql/keys/client-cert.pem'
 ssl_key = '/usr/local/mysql/keys/client-key.pem'
 
 
+[addition]
+repluser = 'bsrt_repl_rg'
+replpasswd = 'repl_123,./'
+replication = 'replication'
+region = 'region'
 
