--- a/config/zk.conf
+++ b/config/zk.conf
@@ -38,16 +38,16 @@ cert = 'client-cert.pem'
 key = 'client-key.pem'
 
 #主从用户
-repluser = 'bsrt_repl'
-replpasswd = 'repl_123,./'
+repluser = ''
+replpasswd = ''
 ssl_ca = '/usr/local/mysql/keys/ca.pem'
 ssl_cert = '/usr/local/mysql/keys/client-cert.pem'
 ssl_key = '/usr/local/mysql/keys/client-key.pem'
 
 
 [addition]
-repluser = 'bsrt_repl_rg'
-replpasswd = 'repl_123,./'
+repluser = ''
+replpasswd = ''
 replication = 'replication'
 region = 'region'
 
