添加slave节点宕机检查
slave宕机同步状态到路由，防止slave宕机恢复读取到旧数据

--- a/config/zk.conf
+++ b/config/zk.conf
@@ -21,13 +21,16 @@ meta_group = 'meta/group'
 meta_router = 'meta/router'
 #在线host节点
 online_path = 'online-list'
+#client在线列表
+online_client_path = 'online-clients'
 #当前各组master所在节点
 master_path = 'master'
 #haproxy配置节点
 haproxy_path = 'haproxy'
 #记录心跳丢失但mysql在线
 watch_down = 'watch-down'
-
+#slave宕机列表目录
+slave_down = 'slavedown'
 
 [mysqldb]
 #mysql数据库配置选项
