--- a/client/config/client.conf
+++ b/client/config/client.conf
@@ -1,7 +1,3 @@
-# -*- encoding: utf-8 -*-
-'''
-@author: xiaozhong
-'''
 [zookeeper]
 #zk集群地址使用,分隔，如127.0.0.1:2181,127.0.0.1:2182....
 hosts = '192.168.212.127:2181,192.168.212.127:2182,192.168.212.127:2183'
@@ -17,10 +13,16 @@ online_client_path = 'online-clients'
 
 
 
+
 [mysqldb]
 #mysql数据库配置选项
-mysqluser = 'root'
-mysqlpasswd = 'root'
+mysqluser = ''
+mysqlpasswd = ''
+mysqlport = 3306
+sockedir = '/usr/local/mysql/mysql.sock'
 
 repluser = ''
 replpasswd = ''
+
+[global]
+mysql_check_retry = 3
