--- a/DC_MHA_CLIENT/config/client.conf
+++ b/DC_MHA_CLIENT/config/client.conf
@@ -16,8 +16,8 @@ online_client_path = 'online-clients'
 
 [mysqldb]
 #mysql数据库配置选项
-mysqluser = ''
-mysqlpasswd = ''
+mysqluser = 'root'
+mysqlpasswd = 'bsrt123,./'
 mysqlport = 3306
 sockedir = '/usr/local/mysql/mysql.sock'
 
