--- a/DC_MHA_CLIENT/config/client.conf
+++ b/DC_MHA_CLIENT/config/client.conf
@@ -12,13 +12,12 @@ online_path = 'online-list'
 online_client_path = 'online-clients'
 
 
-
-
 [mysqldb]
 #mysql数据库配置选项
 mysqluser = 'root'
 mysqlpasswd = 'bsrt123,./'
 mysqlport = 3306
+binlogdir = '/usr/local/mysql/data'
 sockedir = '/usr/local/mysql/mysql.sock'
 
 repluser = ''
@@ -27,3 +26,7 @@ replport = 3306
 
 [global]
 mysql_check_retry = 3
+
+
+[socket]
+port = 9011
