--- a/config/client.conf
+++ b/config/client.conf
@@ -15,7 +15,7 @@ online_client_path = 'online-clients'
 [mysqldb]
 #mysql数据库配置选项
 mysqluser = 'root'
-mysqlpasswd = 'bsrt123,./'
+mysqlpasswd = ''
 mysqlport = 3306
 binlogdir = '/usr/local/mysql/data'
 sockedir = '/usr/local/mysql/mysql.sock'
